--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -675,7 +675,7 @@ service ril-daemon2 /vendor/bin/hw/rild -c 2
     class main
     user radio
     disabled
-    group radio cache inet misc audio qcom_diag log readproc wakelock
+    group radio cache inet misc audio log readproc wakelock
     capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
 
 service rild2-wrapper /system/bin/sh /system/etc/init.qcom.ril.sh
